name:           distributed-process-fsm
version:        0.0.1
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2017
Author:         Tim Watson
Maintainer:     Tim Watson <watson.timothy@gmail.com>
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-fsm
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-fsm/issues
synopsis:       The Cloud Haskell implementation of Erlang/OTP gen_statem
description:    Modelled after Erlang OTP's gen_statem, this framework provides similar
                facilities for Cloud Haskell.
category:       Control
Tested-With:    GHC==7.10.3 GHC==8.0.1 GHC==8.0.2
data-dir:       ""

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-fsm

library
  build-depends:
                   base >= 4.8.2.0 && < 5,
                   distributed-process >= 0.6.6 && < 0.7,
                   distributed-process-extras >= 0.3.1 && < 0.4,
                   distributed-process-async >= 0.2.4 && < 0.3,
                   distributed-process-client-server >= 0.2.0 && < 0.3,
                   binary >= 0.6.3.0 && < 0.9,
                   deepseq >= 1.3.0.1 && < 1.6,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   unordered-containers >= 0.2.3.0 && < 0.3,
                   stm >= 2.4 && < 2.5,
                   time > 1.4 && < 1.8,
                   transformers,
                   exceptions >= 0.5
  extensions:      CPP
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.FSM
  other-modules:
                   Control.Distributed.Process.FSM.Internal.Types
