name:           distributed-process-fsm
version:        0.0.1
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2017
Author:         Tim Watson
Maintainer:     Tim Watson <watson.timothy@gmail.com>
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-fsm
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-fsm/issues
synopsis:       The Cloud Haskell implementation of Erlang/OTP gen_statem
description:    Modelled after Erlang OTP's gen_statem, this framework provides similar
                facilities for Cloud Haskell.
category:       Control
Tested-With:    GHC==7.10.3 GHC==8.0.1 GHC==8.0.2
data-dir:       ""

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-fsm

library
  build-depends:
                   base >= 4.8.2.0 && < 5,
                   distributed-process >= 0.6.6 && < 0.7,
                   distributed-process-extras >= 0.3.1 && < 0.4,
                   distributed-process-async >= 0.2.4 && < 0.3,
                   distributed-process-client-server >= 0.2.0 && < 0.3,
                   binary >= 0.6.3.0 && < 0.9,
                   deepseq >= 1.3.0.1 && < 1.6,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   unordered-containers >= 0.2.3.0 && < 0.3,
                   stm >= 2.4 && < 2.5,
                   time > 1.4 && < 1.8,
                   transformers,
                   exceptions >= 0.5
  extensions:      CPP
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.FSM,
                   Control.Distributed.Process.FSM.Internal.Types,
                   Control.Distributed.Process.FSM.Internal.Process

test-suite FsmTests
  type:            exitcode-stdio-1.0
 --  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.7,
                   network >= 2.3 && < 2.7,
                   network-transport >= 0.4 && < 0.5,
                   network-transport-tcp >= 0.4 && < 0.6,
                   distributed-process >= 0.6.6 && < 0.7,
                   distributed-process-fsm,
                   distributed-process-extras >= 0.3.1 && < 0.4,
                   distributed-process-systest >= 0.1.1 && < 0.2,
                   distributed-static,
                   binary >= 0.6.3.0 && < 0.9,
                   bytestring,
                   containers,
                   data-accessor,
                   deepseq >= 1.3.0.1 && < 1.5,
                   fingertree < 0.2,
                   hashable,
                   mtl,
                   stm >= 2.3 && < 2.5,
                   time,
                   transformers,
                   unordered-containers >= 0.2.3.0 && < 0.3,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   QuickCheck >= 2.4,
                   test-framework-quickcheck2,
                   HUnit >= 1.2 && < 2,
                   rematch >= 0.2.0.0,
                   ghc-prim
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -eventlog
  extensions:      CPP
  main-is:         TestFSM.hs
