name:           distributed-process-platform
version:        0.1.0
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2012 - 2013
Author:         Tim Watson
Maintainer:     watson.timothy@gmail.com
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-platform
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-platform/issues
synopsis:       The Cloud Haskell Application Platform
description:    Modelled after Erlang's OTP, this framework provides similar
                facilities for Cloud Haskell, grouping essential practices
                into a set of modules and standards designed to help you build
                concurrent, distributed applications with relative ease.
category:       Control
tested-with:    GHC == 7.4.2
data-dir:       ""

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-platform

flag perf
  description: Build with Template Haskell support
  default: True

library
  build-depends:
                   base >= 4,
                   distributed-process >= 0.4.2,
                   derive,
                   binary,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   stm >= 2.3 && < 2.5,
                   transformers
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.Platform,
                   Control.Distributed.Process.Platform.Async,
                   Control.Distributed.Process.Platform.Async.AsyncChan,
                   Control.Distributed.Process.Platform.Async.AsyncSTM,
                   Control.Distributed.Process.Platform.Call,
                   Control.Distributed.Process.Platform.Test,
                   Control.Distributed.Process.Platform.Time,
                   Control.Distributed.Process.Platform.Timer,
                   Control.Distributed.Process.Platform.ManagedProcess,
                   Control.Distributed.Process.Platform.ManagedProcess.Client,
                   Control.Distributed.Process.Platform.ManagedProcess.Server
  other-modules:
                   Control.Distributed.Process.Platform.Internal.Primitives,
                   Control.Distributed.Process.Platform.Internal.Types,
                   Control.Distributed.Process.Platform.Internal.Common,
                   Control.Distributed.Process.Platform.Internal.Queue.SeqQ
                   Control.Distributed.Process.Platform.Async.Types,
                   Control.Distributed.Process.Platform.ManagedProcess.Internal.Types,
                   Control.Distributed.Process.Platform.ManagedProcess.Internal.GenProcess

test-suite TimerTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   distributed-process,
                   derive,
                   containers >= 0.4 && < 0.6,
                   network-transport >= 0.3 && < 0.4,
                   mtl,
                   network-transport-tcp >= 0.3 && < 0.4,
                   binary >= 0.5 && < 0.7,
                   network >= 2.3 && < 2.5,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers
  hs-source-dirs:
                   src,
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestTimer.hs

test-suite PrimitivesTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   distributed-process,
                   derive,
                   network-transport >= 0.3 && < 0.4,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   network-transport-tcp >= 0.3 && < 0.4,
                   binary >= 0.5 && < 0.7,
                   network >= 2.3 && < 2.5,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers
  hs-source-dirs:
                   src,
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestPrimitives.hs

test-suite AsyncTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   distributed-process,
                   derive,
                   network-transport >= 0.3 && < 0.4,
                   mtl,
                   network-transport-tcp >= 0.3 && < 0.4,
                   binary >= 0.5 && < 0.7,
                   network >= 2.3 && < 2.5,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers
  hs-source-dirs:
                   src,
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestAsync.hs

test-suite GenServerTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   distributed-process,
                   derive,
                   network-transport >= 0.3 && < 0.4,
                   mtl,
                   network-transport-tcp >= 0.3 && < 0.4,
                   binary >= 0.5 && < 0.7,
                   network >= 2.3 && < 2.5,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers,
                   ghc-prim
  hs-source-dirs:
                   src,
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestGenServer.hs

Executable leaks
  if flag(perf)
    Build-Depends:   base >= 4.4 && < 5,
                     containers,
                     derive,
                     directory,
                     network-transport-tcp,
                     distributed-process,
                     old-locale,
                     time,
                     distributed-process-platform,
                     network-transport-tcp >= 0.3 && < 0.4,
                     bytestring >= 0.9 && < 0.11,
                     binary >= 0.5 && < 0.7
  else
    buildable: False
  Main-Is:           regressions/LeakByteStrings.hs
--  Main-Is:           regressions/HRoqLeak.hs
  ghc-options:       -threaded -prof -auto-all -rtsopts
  Extensions:        ScopedTypeVariables

