name:           distributed-process-platform
version:        0.1.0
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2012 - 2013
Author:         Tim Watson
Maintainer:     watson.timothy@gmail.com
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-platform
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-platform/issues
synopsis:       The Cloud Haskell Application Platform
description:    Modelled after Erlang's OTP, this framework provides similar
                facilities for Cloud Haskell, grouping essential practices
                into a set of modules and standards designed to help you build
                concurrent, distributed applications with relative ease.
category:       Control
tested-with:    GHC == 7.4.2 GHC == 7.6.2
data-dir:       ""

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-platform

flag perf
  description: Build with profiling enabled
  default: False

library
  build-depends:
                   base >= 4,
                   data-accessor >= 0.2.2.3,
                   distributed-process >= 0.4.2,
                   binary >= 0.6.3.0 && < 0.8,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   stm >= 2.3 && < 2.5,
                   transformers
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.Platform,
                   Control.Distributed.Process.Platform.Async,
                   Control.Distributed.Process.Platform.Async.AsyncChan,
                   Control.Distributed.Process.Platform.Async.AsyncSTM,
                   Control.Distributed.Process.Platform.Call,
                   Control.Distributed.Process.Platform.ManagedProcess,
                   Control.Distributed.Process.Platform.ManagedProcess.Client,
                   Control.Distributed.Process.Platform.ManagedProcess.Server,
                   Control.Distributed.Process.Platform.ManagedProcess.Server.Restricted
                   Control.Distributed.Process.Platform.Supervisor,
                   Control.Distributed.Process.Platform.Test,
                   Control.Distributed.Process.Platform.Time,
                   Control.Distributed.Process.Platform.Timer
  other-modules:
                   Control.Distributed.Process.Platform.Internal.Primitives,
                   Control.Distributed.Process.Platform.Internal.Types,
                   Control.Distributed.Process.Platform.Internal.Queue.SeqQ
                   Control.Distributed.Process.Platform.Async.Types,
                   Control.Distributed.Process.Platform.ManagedProcess.Internal.Types,
                   Control.Distributed.Process.Platform.ManagedProcess.Internal.GenProcess

test-suite TimerTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   distributed-process,
                   binary >= 0.6.3.0 && < 0.8,
                   containers >= 0.4 && < 0.6,
                   network-transport >= 0.3 && < 0.4,
                   mtl,
                   network-transport-tcp >= 0.3 && < 0.4,
                   network >= 2.3 && < 2.5,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers
  hs-source-dirs:
                   src,
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestTimer.hs

test-suite PrimitivesTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   distributed-process,
                   network-transport >= 0.3 && < 0.4,
                   mtl,
                   containers >= 0.4 && < 0.6,
                   network-transport-tcp >= 0.3 && < 0.4,
                   binary >= 0.6.3.0 && < 0.8,
                   network >= 2.3 && < 2.5,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers
  hs-source-dirs:
                   src,
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestPrimitives.hs

test-suite AsyncTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   distributed-process,
                   network-transport >= 0.3 && < 0.4,
                   mtl,
                   network-transport-tcp >= 0.3 && < 0.4,
                   binary >= 0.6.3.0 && < 0.8,
                   network >= 2.3 && < 2.5,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers
  hs-source-dirs:
                   src,
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestAsync.hs

test-suite ManagedProcessTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   containers,
                   distributed-process,
                   network-transport >= 0.3 && < 0.4,
                   mtl,
                   network-transport-tcp >= 0.3 && < 0.4,
                   binary >= 0.6.3.0 && < 0.8,
                   network >= 2.3 && < 2.5,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers,
                   ghc-prim
  hs-source-dirs:
                   src,
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestManagedProcess.hs

test-suite SupervisorTests
  type:            exitcode-stdio-1.0
--  x-uses-tf:       true
  build-depends:
                   base >= 4.4 && < 5,
                   ansi-terminal >= 0.5 && < 0.6,
                   containers,
                   distributed-process,
                   data-accessor,
                   network-transport >= 0.3 && < 0.4,
                   mtl,
                   network-transport-tcp >= 0.3 && < 0.4,
                   binary >= 0.6.3.0 && < 0.8,
                   network >= 2.3 && < 2.5,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 2.5,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers,
                   rematch >= 0.1.2.1,
                   ghc-prim
  hs-source-dirs:
                   src,
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -eventlog
  extensions:      CPP
  main-is:         TestSupervisor.hs

Executable leaks
  if flag(perf)
    Build-Depends:   base >= 4.4 && < 5,
                     containers,
                     directory,
                     network-transport-tcp,
                     distributed-process,
                     old-locale,
                     time,
                     distributed-process-platform,
                     network-transport-tcp >= 0.3 && < 0.4,
                     bytestring >= 0.9 && < 0.11,
                     binary > 0.6.2.0 && < 0.8
  else
    buildable: False
  Main-Is:           regressions/LeakByteStrings.hs
--  Main-Is:           regressions/HRoqLeak.hs
  ghc-options:       -threaded -prof -auto-all -rtsopts
  Extensions:        ScopedTypeVariables

